fix: ensure button text do not overflow button width

--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -67,13 +67,13 @@
 }
 
 .form-group .btn-wrapper .btn {
-    font-size: 18px;
+    font-size: 16px;
     border-radius: 4px;
     color: var(--dark-grey);
     font-weight: 700;
     text-transform: uppercase;
     padding: 14px;
-    width: 25%;
+    min-width: 100px; /* Added to prevent the button from shrinking too much */
     white-space: nowrap;
     border: none;
     cursor: pointer;
@@ -94,7 +94,7 @@
     position: relative;
     width: 100%;
     gap: 4px;
-    
+
     display: flex;
   }
   
